# proteome

./: .gitignore  README.md  changelog.md  flake.nix  hie.yaml  package.yaml  proteome.cabal  readme.md  ribosome  stack.yaml
.github/workflows/: latest.yml  tags.yml
app/: Main.hs
lib/: Prelude.hs
lib/Proteome/: Add.hs  BufEnter.hs  Buffers.hs  Config.hs  Diag.hs  Env.hs  Filename.hs  Files.hs  Grep.hs  Init.hs  Log.hs  Path.hs  PersistBuffers.hs  Plugin.hs  Prelude.hs  Project.hs  Quit.hs  Save.hs  Settings.hs  Tags.hs
lib/Proteome/Add/: Syntax.hs
lib/Proteome/Buffers/: Syntax.hs
lib/Proteome/Data/: ActiveProject.hs  AddItem.hs  AddOptions.hs  Env.hs  Error.hs  FileScanItem.hs  FilenameError.hs  FilesConfig.hs  FilesError.hs  GrepError.hs  GrepOutputLine.hs  ListedBuffer.hs  PersistBuffers.hs  Project.hs  ProjectConfig.hs  ProjectLang.hs  ProjectMetadata.hs  ProjectName.hs  ProjectRoot.hs  ProjectSpec.hs  ProjectType.hs  Proteome.hs  Replace.hs  ReplaceError.hs  ResolveError.hs  TagsError.hs
lib/Proteome/Files/: Process.hs  Source.hs  Syntax.hs
lib/Proteome/Grep/: Line.hs  Parse.hs  Process.hs  Replace.hs  Syntax.hs
lib/Proteome/Project/: Activate.hs  Resolve.hs
lib/Proteome/System/: Path.hs
lib/Proteome/Test/: Config.hs  Functional.hs  Unit.hs
lib/Ribosome/: Log.hs  Persist.hs
lib/Ribosome/Api/: Buffer.hs  Option.hs  Response.hs
lib/Ribosome/Config/: Setting.hs  Settings.hs
lib/Ribosome/Data/: Errors.hs  Ribo.hs  Ribosome.hs  ScratchOptions.hs
lib/Ribosome/Internal/: IO.hs  NvimObject.hs
lib/Ribosome/Test/: Embed.hs  Exists.hs  File.hs  Functional.hs  IO.hs  Unit.hs
ops/: hpack.nix  overrides.nix
ops/hpack/shared/: defaults.yaml  meta.yaml
plugin/: boot.vim  chromatin.vim  run.vim
test/f/: AddSpec.hs  Config.hs  ConfigSpec.hs  InitSpec.hs  SpecMain.hs
test/f/fixtures/rtp/project/haskell/: flagellum.vim
test/u/: AddFSpec.hs  AddMenuSpec.hs  AddSpec.hs  BuffersSpec.hs  Config.hs  ConfigSpec.hs  CycleSpec.hs  DiagSpec.hs  FilenameSpec.hs  FilesSpec.hs  GrepSpec.hs  InitSpec.hs  MruSpec.hs  MultiSpec.hs  MultiTagsSpec.hs  PersistBuffersSpec.hs  PersistLoadSpec.hs  PersistStoreSpec.hs  Prelude.hs  Project.hs  ReplaceSpec.hs  ResolveSpec.hs  ScratchSpec.hs  SpecMain.hs  TagsSpec.hs  TypeMapSpec.hs  Unit.hs
test/u/fixtures/grep/duplicates/: file
test/u/fixtures/grep/pro/: file
test/u/fixtures/persist/load/proteome/haskell/flagellum/: buffers.json
