name: proteome
version: 0.1.0.0
synopsis: neovim project manager
description: neovim plugin for managing project-specific configuration and performing runtime tasks on projects
license: MIT
license-file: LICENSE
author: Torsten Schmits
maintainer: tek@tryp.io
copyright: 2018 Torsten Schmits
category: Neovim
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10
x-curation: uncurated-no-trustee-contact

executable proteome
  main-is: Main.hs
  hs-source-dirs:
    executable
  build-depends:
    base >= 4.7 && < 5,
    proteome,
    nvim-hs >= 1 && < 2,
    HTF
  default-language: Haskell2010

library
  hs-source-dirs:
    lib
  exposed-modules:
    Proteome.Plugin,
    Proteome.Init,
    Proteome.Config,
    Proteome.Add,
    Proteome.Data.Env,
    Proteome.Data.Project,
    Proteome.Data.ProjectSpec,
    Proteome.Project.Resolve,
    Proteome.Settings,
    Proteome.Data.Proteome,
    Proteome.Test.Functional,
    Ribosome.Test.Functional,
    Ribosome.Test.Exists,
    Ribosome.Config.Settings,
    Ribosome.Internal.IO,
    Ribosome.Data.Maybe,
    Ribosome.Data.Ribo,
    Ribosome.Data.Ribosome,
    Ribosome.Api.Option,
    Ribosome.Api.Response
  build-depends:
    base >= 4.7 && < 5,
    directory,
    unliftio,
    nvim-hs >= 1 && < 2,
    utf8-string,
    split,
    time,
    prettyprinter,
    containers,
    filepath,
    resourcet,
    mtl,
    deepseq,
    messagepack
  default-language: Haskell2010

test-suite proteome-functional
  type: exitcode-stdio-1.0
  hs-source-dirs: test/f
  main-is: SpecMain.hs
  build-depends:
    base >= 4.7 && < 5,
    HTF,
    directory,
    unliftio,
    nvim-hs >= 1 && < 2,
    utf8-string,
    split,
    time,
    prettyprinter,
    containers,
    filepath,
    resourcet,
    mtl,
    deepseq,
    messagepack
  hs-source-dirs:
    lib
  other-modules:
    ConfigSpec,
    Proteome.Plugin,
    Proteome.Init,
    Proteome.Config,
    Proteome.Add,
    Proteome.Data.Env,
    Proteome.Data.Project,
    Proteome.Data.ProjectSpec,
    Proteome.Project.Resolve,
    Proteome.Settings,
    Proteome.Data.Proteome,
    Proteome.Test.Functional,
    Ribosome.Test.Functional,
    Ribosome.Test.Exists,
    Ribosome.Config.Settings,
    Ribosome.Internal.IO,
    Ribosome.Data.Maybe,
    Ribosome.Data.Ribo,
    Ribosome.Data.Ribosome,
    Ribosome.Api.Option,
    Ribosome.Api.Response
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
